# docs/swagger.yml
@@ -1,35 +1,22 @@
 openapi: "3.0.0"
+servers:
+- url: http://192.168.31.161:3000/v1
+  description: 测试服务器
 info:
   title: 书签同步助手后端接口
-  version: 0.0.1
+  version: 1.0.0
 tags:
-  - name: User
-    description: 用户管理
+  - name: Version
+    description: 接口版本号
   - name: Bookmark
     description: 书签管理
 paths:
-  /user/login:
-    post:
-      operationId: userLogin
-      summary: 用户登录
+  /version:
+    get:
+      operationId: getVersion
+      summary: 获得接口版本号
       tags:
-        - User
-      requestBody:
-        description: 登录信息。
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                account:
-                  description: 账号
-                  type: string
-                  example: 'admin'
-                password:
-                  description: 密码
-                  type: string
-                  example: 'secret'
+        - Version
       responses:
         '200':
           description: 200 response
@@ -43,36 +30,15 @@ paths:
                   message:
                     type: string
                     description: 响应信息，响应码为非20000时表示错误信息
-              examples:
-                20000:
-                  value: {
-                    "code": 20000,
-                    "message": "OK"
-                 }
-  /user/logout:
-    post:
-      operationId: userLogout
-      summary: 登录注销
-      tags:
-        - User
-      responses:
-        '200':
-          description: 200 response
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  code:
-                    $ref: '#/components/schemas/ResponseCode'
-                  message:
+                  data:
                     type: string
-                    description: 响应信息，响应码为非20000时表示错误信息
+                    description: 版本号信息
               examples:
                 20000:
                   value: {
                     "code": 20000,
-                    "message": "OK"
+                    "message": "OK",
+                    "data": "1.0.0"
                  }
   /bookmark:
     get:
@@ -110,7 +76,7 @@ paths:
       tags:
         - Bookmark
       requestBody:
-        description: 需要添加的职工信息，注意 employeeId 字段是无效的。
+        description: 书签列表
         required: true
         content:
           application/json:
@@ -137,19 +103,16 @@ paths:
                     "code": 20000,
                     "message": "OK"
                  }
+                 
 components:
   schemas:
     ResponseCode:
       type: integer
       enum:
         - 20000
-        - 40000
-        - 40100
       description: >
         响应码:
          * `20000` - 表明调用成功
-         * `40000` - 用户名或密码错误
-         * `40001` - token已过期
     Bookmark:
       type: object
       properties:
@@ -159,12 +122,6 @@ components:
         parentId:
           description: 父节点的ID，根节点没有此属性
           type: string
-        dateAdded:
-          description: 书签节点创建时的时间戳
-          type: integer
-        dateGroupModified:
-          description: 书签文件夹内容的最后更新时间戳，书签节点没有此属性 
-          type: integer
         index:
           description: 书签在父节点中的索引，根节点没有此属性
           type: integer
